--- a/packages/scss-config-webpack-plugin/package.json
+++ b/packages/scss-config-webpack-plugin/package.json
@@ -30,7 +30,7 @@
     "css-loader": "^5.2.4",
     "iconfont-webpack-plugin": "^5.0.1",
     "mini-css-extract-plugin": "^1.5.0",
-    "node-sass": "^5.0.0",
+    "sass": "1.54.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.10",
     "postcss-flexbugs-fixes": "^5.0.2",
